# oven

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
oven_core/: __init__.py  decorators.py  runtime.py
oven_core/backends/: local.py  modal_backend.py
tests/: test_batch.py  test_decorators.py  test_local_backend.py
workloads/: __init__.py  batch_job.py  demo_task.py  utils.py
